apps/wordpress/firewall/allow-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy
spec:
  podSelector: {}
  ingress:
  - {}
  egress:
  - {}
