apps/wordpress/firewall/allow-db-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-access
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Egress
  - Ingress
