apps/wordpress/firewall/allow-wp-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-wp-access
spec:
  podSelector:
    matchLabels:
      name: wordpress
  ingress:
  - ports:
      - protocol: TCP
        port: 80
  egress:
  - {}
