apps/wordpress/firewall/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
